<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround"
    tools:context="com.example.joelcaballero.x0.Game">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/icons"
                android:layout_marginRight="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/icons"
                android:layout_marginTop="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/icons"
                android:layout_marginTop="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button8"
                android:background="@color/icons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button5"
                android:background="@color/icons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button2"
                android:background="@color/icons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button9"
                android:background="@color/icons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button6"
                android:background="@color/icons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button3"
                android:background="@color/icons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="7dp"
                android:textColor="@color/xo"
                android:textSize="70dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/player1img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/x" />
        <TextView
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/pl1"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>


            <TextView
                android:id="@+id/winpl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/vacio"
                android:textColor="@color/primary_text"
                android:textAlignment="center"/>



        </LinearLayout>

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/player2img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/o" />
                <TextView
                    android:id="@+id/player2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/pl2"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>


            <TextView
                android:id="@+id/winpl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/vacio"
                android:textColor="@color/primary_text"
                android:textAlignment="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/empatados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/empatados" />

            <TextView
                android:id="@+id/draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/vacio"
                android:textColor="@color/primary_text"
                android:textAlignment="center"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_centerHorizontal="true">


        <Button
            android:id="@+id/again"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="7dp"
            android:background="@color/primary_text"
            android:text="@string/again"
            android:textColor="@color/buttom"
            android:textStyle="bold"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/rein"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="7dp"
            android:background="@color/primary_text"
            android:text="@string/reiniciar"
            android:textColor="@color/buttom"
            android:textStyle="bold"
            android:textSize="15dp"
            />



    </LinearLayout>

</RelativeLayout>
